# yonder

./: .gitignore  LICENSE  README.md  banks_of_yonder.py  build.bat  build.cmd  build.ps1  files.tmp  pyproject.toml  requirements.txt  todo.md
.github/: FUNDING.yml
resources/: wwise_ids.txt
resources/localization/: README.md  template.pot  update_template.bat  update_template.ps1  update_templates.ps1
resources/templates/: MusicRandomSequenceContainer.json  MusicSwitchContainer.json
scripts/: add_names_to_hash_dict.py  collect_states.py  export_wems.py  generate_lookup_table.py  refcheck.py  transfer_sounds_cli.py  verify_json.py
unlock_wwise_states/: Cargo.toml  aobs_nr.toml  build.bat  rvas_er.yaml  rvas_nr.yaml  update_rvas.ps1  update_rvas_er.ps1  update_rvas_nr.ps1
unlock_wwise_states/eldenring/: Cargo.toml  aobs_er.toml  build.bat  notes.md  rvas.yaml  update_rvas_er.ps1
unlock_wwise_states/eldenring/src/: lib.rs
unlock_wwise_states/nightreign/: CMakeLists.txt  aobs_nr.toml  build.bat  notes.txt  rvas.yaml  unlock_wwise_states_nr.yaml  update_rvas_nr.ps1
unlock_wwise_states/nightreign/src/: config.cpp  config.hpp  dllmain.cpp
unlock_wwise_states/src/: lib.rs
yonder/: __init__.py  convenience.py  datatypes.py  enums.py  export.py  game.py  hash.py  interpolation.py  node.py  player.py  query.py  soundbank.py  transfer.py  util.py  wem.py
yonder/audio/: __init__.py  audiomath.py  equalizer.py  mixer.py  new_player.py  pitch_shift.py  playback_control.py  player.py  stream_source.py  voice.py
yonder/audio/old/: __init__.py  player.py
yonder/gui/: config.py  helpers.py  icons.py  localization.py  localization_old.py  style.py  yonder.py
yonder/gui/dialogs/: about_dialog.py  batch_sound_builder.py  calc_hash_dialog.py  choice_dialog.py  compare_nodes_dialog.py  convert_wav_dialog.py  create_ambience_bgm_dialog.py  create_ambience_track_dialog.py  dialog.py  (+21 more)
yonder/node_types/: __init__.py  action.py  actor_mixer.py  attenuation.py  audio_device.py  aux_bus.py  bus.py  dialog_event.py  event.py  fx_custom.py  fx_share_set.py  layer_container.py  music_random_sequence_container.py  music_segment.py  music_switch_container.py  music_track.py  object_id.py  random_sequence_container.py  rewwise_action_params.py  rewwise_base_types.py  rewwise_enums.py  rewwise_nodes.py  rewwise_parse.py  rewwise_soundbank.py  sound.py  soundbank.py  state.py  structure.py  switch_container.py  time_modulator.py  unknown.py  wwise_node.py
yonder/types/: __init__.py  action.py  actor_mixer.py  attenuation.py  audio_device.py  aux_bus.py  base_types.py  bus.py  dialog_event.py  event.py  fx_custom.py  fx_share_set.py  hirc_node.py  layer_container.py  lfo_modulator.py  music_random_sequence_container.py  music_segment.py  music_switch_container.py  music_track.py  object_id.py  random_sequence_container.py  rewwise_base_types.py  rewwise_enums.py  rewwise_parse.py  sections.py  serialization.py  sound.py  soundbank.py  state.py  structure.py  switch_container.py  time_modulator.py  unknown.py
(+40 files in other folders)
